manifests/ingress-18.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-91b0"
    labels:
        app: "diaggarw-91b0"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw74f9-diaggarw-91b0.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-91b0"
                servicePort: 8080
